Added HTML email file.

--- a/app/views/email_sender/email_message.text.erb
+++ b/app/views/email_sender/email_message.text.erb
@@ -1,1 +1,1 @@
-This is the content of the email Michelle has sent to you.
+This is the content of the email Michelle has sent to you (in plain text).
