Edited the ReadMe and made minor tweaks to get the email function working.

--- a/app/views/email_sender/email_message.html.erb
+++ b/app/views/email_sender/email_message.html.erb
@@ -1,1 +1,3 @@
 <p>This is the content of the email Michelle has sent to you (in HTML).</p>
+
+<p>You can see the code I worked on <a href="https://github.com/MichelleGlauser/ror-emailer">at my Github account</a> (minus my user name and password).</p>
