Made email.message call-able in the mailer to send page and views messages. Added style to the messages.

--- a/app/views/email_sender/email_message.html.erb
+++ b/app/views/email_sender/email_message.html.erb
@@ -1,3 +1,5 @@
-<p>This is the content of the email Michelle has sent to you (in HTML).</p>
+<h2><%= @email.message %></h2>
 
-<p>You can see the code I worked on <a href="https://github.com/MichelleGlauser/ror-emailer">at my Github account</a> (minus my user name and password).</p>
+<p><i>This message was sent to you by Michelle.</i></p>
+
+<p>You can see the code I worked on <a href="https://github.com/MichelleGlauser/ror-emailer">at my Github account</a> (minus my domain, user name, and password).</p>
