--- a/app/views/email_sender/email_message.text.erb
+++ b/app/views/email_sender/email_message.text.erb
@@ -1,1 +1,3 @@
-This is the content of the email Michelle has sent to you (in plain text).
+<%= @email.message %>
+
+This plain text message was sent to you by Michelle.
